--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,8 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-wider_face/
+v1/wider_face/
+Face_Detection/
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
