--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ data/
 aug_data/
 logs/
 facetracker.h5/
+data_image/
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
